--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.application.name=hystrix-server
+#spring.cloud.config.uri=http://localhost:88887
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+server.port=9104
+management.endpoints.web.base-path=/
+hystrix.dashboard.proxy-stream-allow-list=*
